[package]
name = "cryptojs_rust"
version = "0.1.1"
edition = "2021"
authors = ["Mehmet Zahid ISIK <mehmetzahidisik@gmail.com>"]
description = "A Rust implementation of CryptoJS encryption/decryption functionality"
license = "MIT"
repository = "https://github.com/mehmet-zahid/cryptojs_rust"
documentation = "https://docs.rs/cryptojs_rust"
readme = "README.md"
keywords = ["cryptography", "aes", "encryption", "cryptojs", "decryption"]
categories = ["cryptography", "api-bindings"]

[dependencies]
aes = "0.7"
block-modes = "0.8"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
md-5 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
thiserror = "1.0"
generic-array = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5" 